@@ -39,7 +39,13 @@
 	</div>
 	<div id="tx_egovapi_selectorForm_version">
 		<label for="tx_egovapi_version">###LABEL_VERSION###</label>
-		<input type="text" id="tx_egovapi_version" />
+		<select id="tx_egovapi_version">
+			<option value="13479" class="status_archived">13479 (A)</option>
+			<option value="13514" class="status_default status_published" selected="selected">13514 (•)</option>
+			<option value="13228" class="status_published">13228 (P)</option>
+			<option value="13437" class="status_published">13437 (P)</option>
+			<option value="13483" class="status_draft">13483 (D)</option>
+		</select>
 	</div>
 	<div id="tx_egovapi_selectorForm_blocks">
 		<fieldset>
